--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 
 [dependencies]
 embedded-hal = "0.2.4"
+bitflags = "1.2.1"
 
 [dev-dependencies]
 # tests, benchmarks, examples
