--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 [dependencies]
 embedded-hal = "0.2.4"
 bitflags = "1.2.1"
+bit_field = "0.10.1"
 
 [dev-dependencies]
 # tests, benchmarks, examples
