--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ readme = "README.md"
 [dependencies]
 embedded-hal = "0.2.4"
 bit_field = "0.10.1"
-
+micromath = "1.1.0"
 [dev-dependencies]
 # tests, benchmarks, examples
